# 2024oskernel

./: Makefile
fat32_fs/src/: lib.rs
os/: Cargo.toml
os/src/: main.rs
os/src/fat/: file.rs  mod.rs  stdio.rs
os/src/mm/: memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: mod.rs  pid.rs  task.rs
riscv-syscalls-testing/user/src/oscomp/: chdir.c  pipe.c
