[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../extern_lib/riscv", features = ["inline-asm"] }
lazy_static = { path = "../extern_lib/lazy-static.rs", features = ["spin_no_std"] }
buddy_system_allocator = {path="../extern_lib/buddy_system_allocator"}
bitflags = {path="../extern_lib/bitflags"}
xmas-elf = {path="../extern_lib/xmas-elf"}
virtio-drivers = { path="../extern_lib/virtio-drivers"}
fat32_fs = { path = "../fat32_fs" }
log = { path = "../extern_lib/log" }
sbi-rt = { path = "../extern_lib/sbi-rt", features = ["legacy"] }

[profile.release]
debug = true
